# capsules

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
.gitlab/: CODEOWNERS
capsule/: Cargo.toml
capsule/examples/: Capsule.toml
capsule/src/: capsule.rs  config.rs  honeycomb.rs  iohashing.rs  lib.rs  main.rs  workspace_path.rs  wrapper.rs
capsule/src/caching/: backend.rs  dummy.rs  honeycomb.rs  mod.rs  s3.rs  stdio.rs  test.rs
capsule/src/observability/: dummy.rs  honeycomb.rs  logger.rs  mod.rs
capsule/tests/: capsule_tests.rs  s3_cache.rs  s3_cache_miss.rs
capsule/tests/common/: mod.rs
cargo-capsule/: Cargo.toml
cargo-capsule/src/: lib.rs
examples/: capsules.toml
src/: capsule.rs  config.rs  lib.rs  main.rs  wrapper.rs
src/caching/: backend.rs  mod.rs  stdio.rs
testing/docker/: Dockerfile  build.sh
tools/capsules_stat/: pyproject.toml
tools/capsules_stat/capsules_stat/: main.py
