[package]
name = "capsule"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
nix = "0.22.1"
itertools = "0.10.1"
sha2 = "0.9.8"
bytes = "1.1.0"
clap = "3.0.0-beta.4"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
tempfile = "3.2.0"

[dev-dependencies]
serial_test = "0.5.1"