[package]
name = "capsule"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
nix = "0.22.1"
itertools = "0.10.3"
indoc = "1.0"
sha2 = "0.9.8"
bytes = "1.1.0"
clap = "3.0.0-beta.4"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_cbor = "0.11.2"
tempfile = "3.2.0"
reqwest = { version = "0.11", features = ["json"] }
derivative = "2.2.0"
glob = "0.3.0"
tokio = { version = "1.13.0", features = ["fs", "process"] }
tokio-util = "0.6.9"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
hyperx = "1.4.0"
futures = "0.3.17"
shell-words = "1.0.0"

[dev-dependencies]
serial_test = "0.5.1"
assert_cmd = "2.0.2"
rand = "0.8.4"
